fix: remove overflow property from popup box container for improved layout

--- a/src/components/popups/popupBox/popupMenu.css
+++ b/src/components/popups/popupBox/popupMenu.css
@@ -9,7 +9,6 @@
   z-index: 10;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
-  overflow: hidden;
 }
 .popup-resize-handle {
   position: absolute;
